--- a/public_html/index.html
+++ b/public_html/index.html
@@ -1,7 +1,1 @@
-const express = require("express");
-const app = express();
-
-app.get("/login", function(request, response){
-     
-    response.send("stepandanilov");
-});
+index
